# YAPOG

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  TODO  TODO_FIXME  build.sh  database.backup  index.html  params.json  travis.yml  yapog.backup  yapog_database.backup
YAPOG/: CMakeLists.txt
YAPOG.Client/: CMakeLists.txt
YAPOG.Client/include/: Game.hpp  TestGame.hpp
YAPOG.Client/include/Battle/: BaseBattleWidget.hpp  Battle.hpp  BattleActionMenu.hpp  BattleBackgroundWidget.hpp  BattleInfoWidget.hpp  BattleInterface.hpp  BattleMenu.hpp  BattleMoveInfoMenu.hpp  BattleMoveMenu.hpp  BattleParameters.hpp  BattlePhaseManager.hpp  IDrawableBattleEntity.hpp  OpponentBattleInfoWidget.hpp  PlayerTrainer.hpp  PokemonBattleInfoWidget.hpp  PokemonFighter.hpp  PokemonFighterTeam.hpp  WildBattle.hpp
YAPOG.Client/include/Battle/Phase/: ActionPhase.hpp  BattlePhase.hpp  BeginBattlePhase.hpp  BeginTrainerBattlePhase.hpp  BeginTurnPhase.hpp  BeginWildBattlePhase.hpp  EndBattlePhase.hpp  EndPokemonSwitchPhase.hpp  EndTrainerBattlePhase.hpp  EndTurnPhase.hpp  EndWildBattlePhase.hpp  RunWildBattlePhase.hpp  SelectionPhase.hpp  SwitchPhase.hpp
YAPOG.Client/include/Client/: PlayerData.hpp  Session.hpp  User.hpp
YAPOG.Client/include/Configuration/: ConfigurationReader.hpp  GameData.hpp
YAPOG.Client/include/Dialog/: ConsoleDialogDisplay.hpp
YAPOG.Client/include/GameInput/: GameInputReader.hpp
YAPOG.Client/include/GameScreen/: BaseScreen.hpp  BattleScreen.hpp  CreditScreen.hpp  GameMainMenu.cpp  GameMainMenu.h  GameMainMenu.hpp  GameplayScreen.hpp  LoadingScreen.hpp  LoginScreen.hpp  MainMenuScreen.hpp  OptionScreen.hpp  RegistrationScreen.hpp  SplashScreen.hpp  TestScreen.hpp  UpdateScreen.hpp  WidgetPokedex.hpp
YAPOG.Client/include/Gui/: ChatWidget.hpp  GameGuiManager.hpp  GameMainMenu.hpp  GameMenu.hpp  IPokemonSummaryWidget.hpp  LoginWidget.hpp  MainMenu.hpp  MapPlayerInfoPanel.hpp  MapRootWidget.hpp  PokedexCompositeWidget.hpp  PokedexWidget.hpp  PokemonBasicInfoWidget.hpp  PokemonExperienceBarWidget.hpp  PokemonFrontInfoWidget.hpp  PokemonHPBarWidget.hpp  PokemonInfoBox.hpp  PokemonInfoWidget.hpp  PokemonMoveInfoWidget.hpp  PokemonSingleMoveInfoWidget.hpp  PokemonStatsInfoWidget.hpp  PokemonTeamWidget.hpp  RegistrationWidget.hpp  TrainerCardWidget.hpp  WidgetPokedex.hpp
YAPOG.Client/include/Pokemon/: Pokemon.hpp  PokemonInfo.hpp  PokemonInfoReader.hpp  PokemonTeam.hpp
YAPOG.Client/include/World/: World.hpp
YAPOG.Client/include/World/Map/: Character.hpp  CharacterReader.hpp  DestructibleObject.hpp  DestructibleObjectReader.hpp  Map.hpp  Map.hxx  MapCloner.hpp  MapElement.hpp  MapElementReader.hpp  MapReader.hpp  NPC.hpp  NPCReader.hpp  ObjectMoveInfoHandler.hpp  OpenBattleSpawnerArea.hpp  OpenBattleSpawnerAreaReader.hpp  Player.hpp  PlayerReader.hpp  RemoveObjectHandler.hpp  ServerInfoRemoveObjectVisitor.hpp  Teleporter.hpp
YAPOG.Client/include/tmp/: Client.hpp
YAPOG.Client/src/: Client.cpp  Game.cpp  TestGame.cpp
YAPOG.Client/src/Battle/: BaseBattleWidget.cpp  Battle.cpp  BattleActionMenu.cpp  BattleBackgroundWidget.cpp  BattleInfoWidget.cpp  BattleInteface.cpp  BattleMenu.cpp  BattleMoveInfoMenu.cpp  BattleMoveMenu.cpp  BattleParameters.cpp  BattlePhaseManager.cpp  OpponentBattleInfoWidget.cpp  PlayerTrainer.cpp  PokemonBattleInfoWidget.cpp  PokemonFighter.cpp  PokemonFighterTeam.cpp  WildBattle.cpp
YAPOG.Client/src/Battle/Phase/: ActionPhase.cpp  BattlePhase.cpp  BeginBattlePhase.cpp  BeginTrainerBattlePhase.cpp  BeginTurnPhase.cpp  BeginWildBattlePhase.cpp  EndBattlePhase.cpp  EndPokemonSwitchPhase.cpp  EndTrainerBattlePhase.cpp  EndTurnPhase.cpp  (+4 more)
YAPOG.Client/src/Client/: PlayerData.cpp  Session.cpp  User.cpp
YAPOG.Client/src/Configuration/: ConfigurationReader.cpp  GameData.cpp
YAPOG.Client/src/Dialog/: ConsoleDialogDisplay.cpp
YAPOG.Client/src/GameInput/: GameInputReader.cpp
YAPOG.Client/src/GameScreen/: BaseScreen.cpp  BattleScreen.cpp  CreditScreen.cpp  GameMainMenu.cpp  GameplayScreen.cpp  LoadingScreen.cpp  LoginScreen.cpp  MainMenuScreen.cpp  OptionScreen.cpp  RegistrationScreen.cpp  SplashScreen.cpp  TestScreen.cpp  UpdateScreen.cpp  WidgetPokedex.cpp
YAPOG.Client/src/Gui/: ChatWidget.cpp  GameGuiManager.cpp  GameMainMenu.cpp  GameMenu.cpp  LoginWidget.cpp  MainMenu.cpp  MapPlayerInfoPanel.cpp  MapRootWidget.cpp  PokedexCompositeWidget.cpp  PokedexWidget.cpp  PokemonBasicInfoWidget.cpp  PokemonExperienceBarWidget.cpp  PokemonFrontInfoWidget.cpp  PokemonHPBarWidget.cpp  PokemonInfoBox.cpp  PokemonInfoWidget.cpp  PokemonMoveInfoWidget.cpp  PokemonSingleMoveInfoWidget.cpp  PokemonStatsInfoWidget.cpp  PokemonTeamWidget.cpp  RegistrationWidget.cpp  TrainerCardWidget.cpp  WidgetPokedex.cpp
YAPOG.Client/src/Pokemon/: Pokemon.cpp  PokemonInfo.cpp  PokemonInfoReader.cpp  PokemonTeam.cpp
YAPOG.Client/src/World/: World.cpp
YAPOG.Client/src/tmp/: Client.cpp
YAPOG.Server/: CMakeLists.txt
YAPOG.Server/include/: Server.hpp
YAPOG.Server/include/Account/: Account.hpp  AccountManager.hpp  AccountPermission.hpp  PlayerData.hpp
YAPOG.Server/include/Database/: IInsertTable.hpp  ITable.hpp
YAPOG.Server/include/Pokemon/: Pokemon.hpp  PokemonTeam.hpp
YAPOG.Server/include/Server/: ClientManager.hpp  ClientSession.hpp  Server.hpp  User.hpp
YAPOG.Server/include/World/: World.hpp
YAPOG.Server/include/tmp/: Server.hpp
YAPOG.Server/src/: Server.cpp
YAPOG.Server/src/Account/: Account.cpp  AccountManager.cpp  PlayerData.cpp
YAPOG.Server/src/Pokemon/: Pokemon.cpp  PokemonTeam.cpp
YAPOG.Server/src/Server/: ClientManager.cpp  ClientSession.cpp  Server.cpp  User.cpp
YAPOG.Server/src/World/: World.cpp
YAPOG.Server/src/tmp/: Server.cpp
YAPOG.Test/: CMakeLists.txt  test_array.cpp  test_audio.cpp  test_chat.cpp  test_db.cpp  test_filechecker.cpp  test_list.cpp  test_map.cpp  test_pokemon.cpp  test_pokemon_battle.cpp  test_pokemon_type.cpp  test_sprite.cpp  test_timer.cpp  test_xml.cpp
YAPOG/include/YAPOG/: Export.hpp  Log.hpp  Macros.hpp  Vector2.hpp
YAPOG/include/pgstream/: pgstream.hpp
YAPOG/src/pgstream/: pgstream.cpp
(+1291 files in other folders)
